fix: page title wrapper alignment issues fixed

--- a/assets/css/unminified/style-flex.css
+++ b/assets/css/unminified/style-flex.css
@@ -2146,7 +2146,6 @@ body {
 }
 
 .ast-search-menu-icon.slide-search .search-form {
-  -webkit-backface-visibility: visible;
   backface-visibility: visible;
   visibility: hidden;
   opacity: 0;
@@ -2169,7 +2168,6 @@ body {
   padding: 0 3em 0 0;
   border-radius: 2px;
   display: inline-block;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   position: relative;
   color: inherit;
